--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <p>New site</p>
     <p>add nigger</p>
+    <p>HELLO</p>
 </head>
 <body>
     <script src="js/scrept.js"></script>
