--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
     <p>New site</p>
     <p>add nigger</p>
-    <p>HELLO</p>
+    <p>add nieer</p>
+    <p>add er</p>
+    <p>add nigger</p>
+    <p>HELLOo</p>
 </head>
 <body>
     <script src="js/scrept.js"></script>
